--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.rider": "3.0.28",
-    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.probuilder": "5.2.4",
